fixed radio alignment

--- a/Assignment 1/style.css
+++ b/Assignment 1/style.css
@@ -21,9 +21,13 @@ td{
     color: rgb(131, 4, 4);
 }
 
-input{
+.date{
     width: 200px;
     height: 20px;
+}
+
+input{
+    height: 15px;
 }
 
 h2{
@@ -49,3 +53,7 @@ p{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.submit{
+    margin-left: 50%;
+    margin-right: 50%;
+}
